# AutoClicker

./: .gitignore  README.md  clicking_manager.py  info.json  main.py  settings.json  settings_manager.py  test.py
PoetryDependencies/: pyproject.toml
